style(AboutUs/DogGrid/Rules-820): increased font size for filters options and increased its container w. Decreased height and width of the dogs cards. Increased font size for rules cards. Positioned decor circles in AboutUs section correctly. Increased font size for the text block in AboutUs section. Increased gap-x for dogs cards and corrected inline margin.

--- a/src/styles/custom-breakpoints.css
+++ b/src/styles/custom-breakpoints.css
@@ -331,6 +331,34 @@
     height: 14rem;
     transform: translateX(-150%) translateY(40%);
   }
+
+  /* Dog grid */
+  .dog-grid-layout {
+    column-gap: 2rem;
+  }
+  .dog-card-container {
+    width: 18rem;
+    min-height: 27rem;
+    margin-inline: auto;
+  }
+
+  /* Filters */
+  .filter-button {
+    font-size: 1rem;
+  }
+  .filters-container {
+    max-width: 56rem;
+  }
+
+  /* Rule cards */
+  .rule-text {
+    font-size: 1.125rem;
+  }
+
+  /* About section */
+  .about-content {
+    font-size: 1.5rem;
+  }
 }
 
 @media (max-width: 1023px) {
